--- a/languages/custom-post-order-de_DE.po
+++ b/languages/custom-post-order-de_DE.po
@@ -3,34 +3,34 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Custom Posts Order 2017-08-28\n"
-"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/cpo\n"
-"POT-Creation-Date: 2017-08-28 14:58:36+00:00\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/mpat-cpo\n"
+"POT-Creation-Date: 2017-08-30 11:50:48+00:00\n"
+"PO-Revision-Date: 2017-08-30 13:52+0200\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: de_DE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2017-08-28 17:06+0200\n"
-"Language-Team: \n"
 "X-Generator: Poedit 2.0.3\n"
-"Last-Translator: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Language: de_DE\n"
 
 #. Plugin Name of the plugin/theme
-msgid "Custom Posts Order"
-msgstr ""
+msgid "MPAT Custom Posts Order"
+msgstr "MPAT Benutzerdefinierte Posts bestellen"
 
 #. Plugin URI of the plugin/theme
-msgid "https://github.com/jeanphilipperuijs/cpo"
+msgid "https://github.com/MPAT-eu/cpo"
 msgstr ""
 
 #. Description of the plugin/theme
 msgid "Settingless Custom Post Order"
-msgstr ""
+msgstr "Fertigen Sie die Post-Bestellung besonders an"
 
 #. Author of the plugin/theme
 msgid "Jean-Philippe Ruijs"
 msgstr ""
 
 #. Author URI of the plugin/theme
-msgid "https://github.com/jeanphilipperuijs/"
+msgid "https://github.com/MPAT-eu/"
 msgstr ""
