--- a/languages/custom-post-order-en_GB.po
+++ b/languages/custom-post-order-en_GB.po
@@ -8,7 +8,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2017-08-28 17:04+0200\n"
+"PO-Revision-Date: 2017-08-30 13:34+0200\n"
 "Language-Team: \n"
 "X-Generator: Poedit 2.0.3\n"
 "Last-Translator: \n"
@@ -17,7 +17,7 @@ msgstr ""
 
 #. Plugin Name of the plugin/theme
 msgid "Custom Posts Order"
-msgstr ""
+msgstr "Custom Posts Order"
 
 #. Plugin URI of the plugin/theme
 msgid "https://github.com/jeanphilipperuijs/cpo"
@@ -25,7 +25,7 @@ msgstr ""
 
 #. Description of the plugin/theme
 msgid "Settingless Custom Post Order"
-msgstr ""
+msgstr "Customize the Postorder"
 
 #. Author of the plugin/theme
 msgid "Jean-Philippe Ruijs"
