--- a/languages/mpat-cpo-de_DE.po
+++ b/languages/mpat-cpo-de_DE.po
@@ -3,21 +3,21 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Custom Posts Order 2017-08-28\n"
-"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/mpat-cpo\n"
-"POT-Creation-Date: 2017-08-30 13:29:33+00:00\n"
-"PO-Revision-Date: 2017-08-30 15:46+0200\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/cpo\n"
+"POT-Creation-Date: 2017-10-09 10:41+0200\n"
+"PO-Revision-Date: 2017-10-09 10:41+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"Language: it_IT\n"
+"Language: de_DE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.3\n"
+"X-Generator: Poedit 1.8.11\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. Plugin Name of the plugin/theme
 msgid "MPAT Custom Posts Order"
-msgstr "MPAT Ordine postale personalizzato"
+msgstr "MPAT Benutzerdefinierte Posts bestellen"
 
 #. Plugin URI of the plugin/theme
 msgid "https://github.com/MPAT-eu/cpo"
@@ -25,7 +25,7 @@ msgstr ""
 
 #. Description of the plugin/theme
 msgid "Settingless Custom Post Order"
-msgstr "Ordine postale personalizzato per flusso laterale"
+msgstr "Fertigen Sie die Post-Bestellung besonders an"
 
 #. Author of the plugin/theme
 msgid "Jean-Philippe Ruijs"
