--- a/languages/mpat-cpo-es_ES.po
+++ b/languages/mpat-cpo-es_ES.po
@@ -2,22 +2,22 @@
 # This file is distributed under the same license as the Custom Posts Order package.
 msgid ""
 msgstr ""
-"Project-Id-Version: Custom Posts Order 2017-08-28\n"
-"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/mpat-cpo\n"
-"POT-Creation-Date: 2017-08-30 13:29:33+00:00\n"
-"PO-Revision-Date: 2017-08-30 15:30+0200\n"
+"Project-Id-Version: Custom Posts Order 1.0.1\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/cpo\n"
+"POT-Creation-Date: 2017-10-09 10:41+0200\n"
+"PO-Revision-Date: 2017-10-09 10:41+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"Language: fi_FI\n"
+"Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.3\n"
+"X-Generator: Poedit 1.8.11\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. Plugin Name of the plugin/theme
 msgid "MPAT Custom Posts Order"
-msgstr "MPAT mukautettuja virkoja järjestyksessä"
+msgstr "MPAT Pedidos personalizados"
 
 #. Plugin URI of the plugin/theme
 msgid "https://github.com/MPAT-eu/cpo"
@@ -25,7 +25,7 @@ msgstr ""
 
 #. Description of the plugin/theme
 msgid "Settingless Custom Post Order"
-msgstr "MPAT muokatun postin tilaus sideflow"
+msgstr "Postre personalizado sin configuración"
 
 #. Author of the plugin/theme
 msgid "Jean-Philippe Ruijs"
