--- a/languages/mpat-cpo.pot
+++ b/languages/mpat-cpo.pot
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MPAT Custom Posts Order 1.0.1\n"
-"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/mpat-cpo\n"
-"POT-Creation-Date: 2017-08-30 13:29:33+00:00\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/cpo\n"
+"POT-Creation-Date: 2017-10-09 08:34:20+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
